# mz-hyprnurs

./: .gitignore  Cargo.toml  PKGBUILD  README.md  install.sh  uninstall.sh
.github/workflows/: release.yml
assets/: Info.plist  icon.icns
src/: main.rs
